--- a/package.json
+++ b/package.json
@@ -4,18 +4,10 @@
   "main": "index.js",
   "author": "Сергеев Павел",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "express": "^4.18.1",
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^5.2.1",
-    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "body-parser": "^1.20.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
     "cookie-parser": "^1.4.6",
@@ -25,8 +17,8 @@
     "validator": "^13.7.0"
   },
   "scripts": {
-    "start": "node App.js",
-    "dev": "nodemon App.js",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "npx eslint ."
   },
@@ -51,8 +43,6 @@
   "devDependencies": {
     "gh-pages": "^4.0.0",
     "body-parser": "^1.20.0",
-    "express": "^4.18.1",
-    "mongoose": "^6.6.3",
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
