--- a/package.json
+++ b/package.json
@@ -5,17 +5,8 @@
   "author": "Сергеев Павел",
   "dependencies": {
     "express": "^4.18.1",
-    "mongodb": "^4.10.0",
     "mongoose": "^6.6.5",
-    "web-vitals": "^2.1.4",
-    "body-parser": "^1.20.0",
-    "bcryptjs": "^2.4.3",
-    "celebrate": "^15.0.1",
-    "cookie-parser": "^1.4.6",
-    "dotenv": "^16.0.2",
-    "gauge": "^4.0.4",
-    "jsonwebtoken": "^8.5.1",
-    "validator": "^13.7.0"
+    "body-parser": "^1.20.0"
   },
   "scripts": {
     "start": "node app.js",
@@ -23,30 +14,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "npx eslint ."
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "devDependencies": {
-    "gh-pages": "^4.0.0",
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-react": "^7.31.1",
     "nodemon": "^2.0.19"
   }
 }
