--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "main": "index.js",
   "author": "Сергеев Павел",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
-    "body-parser": "^1.20.0"
+    "validator": "^13.7.0"
   },
   "scripts": {
     "start": "node app.js",
