--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "celebrate": "^15.0.1",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
+    "express-winston": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "winston": "^3.8.2"
   },
   "scripts": {
     "start": "node app.js",
@@ -20,7 +22,7 @@
     "lint": "npx eslint ."
   },
   "devDependencies": {
-    "eslint": "^8.2.0",
+    "eslint": "8.22.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "jest": "^29.2.0",
